ristrutturazione del codice basato sugli use case